gateway/overlays/dev/gateway-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-gateway
spec:
  template:
    spec:
      containers:
      - name: istio-proxy
        resources: 
          limits:
            cpu: 500m
          requests:
            cpu: 200m
