gateway/overlays/dev/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.audryus.arpa"
    allowedRoutes:
      namespaces:
        from: All
  - name: wildcard-https
    protocol: HTTPS
    port: 443
    hostname: "*.audryus.arpa"
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: tls-apps
